# shed

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.ci.yml  init.sh
.github/workflows/: build-wheels.yaml  ci.yml
LICENSES/: GDAL.txt  GEOS.txt  PROJ.txt  README.md  curl.txt  jpeg-turbo.txt  libdeflate.txt  libpng.txt  libtiff.txt  nghttp2.txt  openssl.txt  sqlite.txt  xz.txt  zlib.txt  zstd.txt
ci/: auditwheel_preflight.sh  config-linux.sh  config.sh  copy_gdal_data.sh  delocate_preflight.sh  rss-baseline.json
crates/core/: Cargo.toml  README.md
crates/core/benches/: dissolve_strategy.rs
crates/core/examples/: bench_delineation.rs
crates/core/src/: assembly.rs  cache.rs  cog.rs  engine.rs  error.rs  lib.rs  parquet_cache.rs  raster_cache.rs  refinement.rs  resolver.rs  runtime.rs  session.rs  source.rs  source_telemetry.rs  staged.rs  testutil.rs
crates/core/src/algo/: accumulation_tile.rs  area.rs  canonical_wkb.rs  catchment_mask.rs  clean_epsilon.rs  clean_topology.rs  coord.rs  dissolve.rs  distance.rs  flow_dir.rs  flow_direction_tile.rs  geo_transform.rs  hole_fill.rs  largest_polygon.rs  mod.rs  polygonize.rs  raster_tile.rs  rasterize.rs  refine.rs  self_intersection.rs  snap.rs  snap_threshold.rs  tile_state.rs  trace.rs  traits.rs  upstream.rs  watershed_area.rs  watershed_geometry.rs  wkb.rs
crates/core/src/export/: identity.rs  mod.rs  schema.rs  spatial.rs  unit_writer.rs  writer.rs
crates/core/src/reader/: catchment_store.rs  catchment_store_perf_tests.rs  graph.rs  id_index.rs  manifest.rs  mod.rs  snap_store.rs
crates/core/src/telemetry/: jsonl.rs  mod.rs
crates/core/tests/: d8_refinement_parity.rs  finest_level_resolution.rs  hfx_v02_loader.rs  minio_harness.rs  object_store_integration.rs  outlet_resolution.rs  parity_golden_artifacts.rs  parity_v01_oracle_capture.rs  session_open.rs  snap_aux_reader.rs  staged_delineation.rs
crates/core/tests/fixtures/parity/: README.md  seed_golden.json
crates/core/tests/fixtures/parity/goldens/v01_grit_nonrefined/: README.md  oracle_a_grit_nonrefined.json
crates/core/tests/fixtures/parity/goldens/v01_merit_refined/: README.md  oracle_c_merit_refined.json
crates/core/tests/fixtures/parity/goldens/v021_synthetic_nonrefined/: README.md  v021_synthetic_nonrefined.json
crates/gdal/: Cargo.toml
crates/gdal/src/: config.rs  convert.rs  error.rs  geometry_repair.rs  lib.rs  raster_reader.rs  wkb.rs
crates/gdal/tests/: raster_decode_parity.rs
crates/python/: API.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/python/python/pyshed/: __init__.py  __init__.pyi
crates/python/src/: config.rs  data_paths.rs  engine.rs  error.rs  export.rs  geojson.rs  kwargs.rs  lib.rs  result.rs
crates/python/tests/: conftest.py  test_behavioral.py  test_bench_trace.py  test_data_paths.py  test_phase_d.py  test_smoke.py
docs/: basin-geoparquet-export.md  raster-cache.md  telemetry.md
docs/benchmarks/: delineate-harness.md
docs/hfx-v02-redesign/: m1-step4-c-investigation.md  m5-migration-notes.md
docs/investigations/: r2-open-reuse.md  r2-snap-open-reuse.md  v021-read-perf.md
docs/plans/: fast-open-step-critique.md  fast-open-step-plan.md  r2-cold-open-speedup-step-critique.md  r2-cold-open-speedup-step-plan.md  r2-open-reuse-step-critique.md  r2-open-reuse-step-plan.md  r2-snap-open-reuse-step-critique.md  r2-snap-open-reuse-step-plan.md
scratchpad/benchmarks/: 20260416-hydra-cli-baseline.md  20260427-phase4-r2-smoke.md
scratchpad/bugs/: 20260416-01-large-basin-performance.md  20260416-02-memory-footprint.md  20260416-03-small-outlet-area-mismatch.md  README.md
scripts/: bench-delineate.sh  bump-pyshed-version.sh  bump-version.sh  compare-bench.py  measure-rss.sh  phase4-smoke-r2.sh
src/: main.rs
tests/: cli_integration.rs
