[workspace]
members = ["crates/*"]

[workspace.dependencies]
hfx-core = "=0.2.0"

[package]
name = "shed"
version = "0.1.93"
edition = "2024"

[dependencies]
shed-core = { path = "crates/core" }
shed-gdal = { path = "crates/gdal" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
geo = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
shed-core = { path = "crates/core", features = ["test-fixtures"] }

# Uncomment for local hfx-core development:
# [patch.crates-io]
# hfx-core = { path = "../hfx/crates/hfx-core" }
