[workspace]
members = ["crates/*"]

[workspace.dependencies]
# HFX on-disk format 0.2.1 is implemented by the unpublished local hfx-core
# crate (crate version 0.2.64 @ ../hfx rev 478dfa6). The crate version is NOT
# the format version. The [patch.crates-io] entry below redirects this
# crates.io dep to that local crate; do not mistake crate version for the v0.2.1
# contract.
hfx-core = "=0.2.64"

[package]
name = "shed"
version = "0.1.119"
edition = "2024"

[dependencies]
shed-core = { path = "crates/core" }
shed-gdal = { path = "crates/gdal" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
geo = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
shed-core = { path = "crates/core", features = ["test-fixtures"] }

# hfx-core crate version 0.2.64 @ ../hfx rev 478dfa6 implements HFX on-disk
# format 0.2.1 (crate version != format version).
[patch.crates-io]
hfx-core = { path = "../hfx/crates/hfx-core" }
