[package]
name = "shed-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hfx-core.workspace = true
arrow = { version = "54", default-features = false, features = ["ipc"] }
geo = "0.29"
geozero = { version = "0.14", default-features = false, features = ["with-geo", "with-wkb"] }
rayon = "1"
parquet = { version = "54", default-features = false, features = ["arrow", "zstd", "snap", "lz4", "flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tempfile = { version = "3", optional = true }
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]
test-fixtures = ["tempfile"]

[dev-dependencies]
tempfile = "3"
