[package]
name = "shed-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hfx-core.workspace = true
arrow = { version = "58", default-features = false, features = ["ipc"] }
bytes = "1"
dashmap = "6"
dirs = "5"
futures-util = "0.3"
moka = { version = "0.12", features = ["sync"] }
geo = "0.29"
geozero = { version = "0.14", default-features = false, features = ["with-geo", "with-wkb"] }
object_store = { version = "0.13", features = ["aws"] }
rayon = "1"
parquet = { version = "58", default-features = false, features = ["arrow", "zstd", "snap", "lz4", "flate2-zlib-rs", "object_store"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
tiff = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
tracing = "0.1"
url = "2"
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]
test-fixtures = []

[dev-dependencies]
tempfile = "3"

[[example]]
name = "bench_delineation"
required-features = ["test-fixtures"]
