[package]
name = "shed-gdal"
version = "0.1.0"
edition = "2024"

[dependencies]
shed-core = { path = "../core" }
hfx-core = { path = "../../../hfx/crates/hfx-core" }
gdal = { version = "0.19", features = ["bindgen"] }
geo = "0.29"
geozero = { version = "0.14", default-features = false, features = ["with-geo", "with-wkb"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
