[package]
name = "pyshed"
version = "0.1.8"
edition = "2024"
description = "Python bindings for the shed watershed delineation engine"
license = "MIT"
repository = "https://github.com/CooperBigFoot/shed"
homepage = "https://github.com/CooperBigFoot/shed"
readme = "README.md"
publish = false

[lib]
name = "_pyshed"
crate-type = ["cdylib"]

[dependencies]
shed-core = { path = "../core" }
shed-gdal = { path = "../gdal" }
hfx-core.workspace = true
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
geo = "0.29"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
gdal = { version = "0.19", features = ["bindgen"] }
gdal-sys = "=0.12.0"
