[package]
name = "pyshed"
version = "0.2.2"
edition = "2024"
description = "Python bindings for the shed watershed delineation engine"
license = "MIT"
repository = "https://github.com/CooperBigFoot/shed"
homepage = "https://github.com/CooperBigFoot/shed"
readme = "README.md"
publish = false

[lib]
name = "_pyshed"
crate-type = ["cdylib"]

[dependencies]
shed-core = { path = "../core" }
shed-gdal = { path = "../gdal" }
hfx-core.workspace = true
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
geo = "0.29"
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
pyo3-log = "0.12"
log = "0.4"
gdal = { version = "0.19", features = ["bindgen"] }
gdal-sys = "=0.12.0"
strsim = "0.11"

[lints.clippy]
# Wrapped core/thiserror error types sit at clippy's 128-byte result_large_err
# threshold; enum layout crosses it on linux (CI) but not macos-arm64, so this only
# fires in CI. Boxing the large Err variants is deferred tech debt; allow package-wide.
result_large_err = "allow"
